done till user borrow book part

--- a/index.html
+++ b/index.html
@@ -24,4 +24,10 @@
 	admin_btn.addEventListener("click",()=>{
 		window.location.href = "auth.html";
 	})
+
+	let user_btn = document.querySelector(".user");
+
+	user_btn.addEventListener("click",()=>{
+		window.location.href = "user.html";
+	})
 </script>
