--- a/admindashboard.html
+++ b/admindashboard.html
@@ -1,71 +1,288 @@
 <!DOCTYPE html>
- <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="../favicon.ico">
-        <link rel="stylesheet" type="text/css" href="styles/demo.css" />
-        <link rel="stylesheet" type="text/css" href="styles/style.css" />
-        <link rel="stylesheet" type="text/css" href="styles/animate-custom.css" />
-    </head>
-    <body>
-        <div class="container">
-                <section>              
-                <div id="container_demo" >
-                    <a class="hiddenanchor" id="toregister"></a>
-                    <a class="hiddenanchor" id="tologin"></a>
-                    <div id="wrapper">
-                        <div id="login" class="animate form">
-                            <form autocomplete="on">
-                                <h1>Create Book</h1>
-                                <p>
-                                    <label for="username" class="uname" data-icon="u" > Book Image Url </label>
-                                    <input id="image_url" name="image_url" required="required" type="url" placeholder="book image_url"/>
-                                </p>
-                                <p>
-                                    <label for="bookname" class="youpasswd" data-icon="p"> Book Name </label>
-                                    <input id="bookname" name="password" required="required" type="text" placeholder="book name" />
-                                </p>
-								<p>
-                                    <label for="authorname" class="uname" data-icon="u">Author Name</label>
-                                    <input id="authorname" name="authorname" required="required" type="text" placeholder="author name" />
-                                </p>
-                                <p>
-                                    <select id="genre">
-										<option value="" selected>Genre</option>
-										<option value="Science">Science</option>
-										<option value="Fiction">Fiction</option>
-										<option value="History">History</option>
-										<option value="Tech">Tech</option>
-										<option value="Business">Business</option>
-									</select>
-                                </p>
-                                <p>
-                                    <select id="edition">
-										<option value="" selected>Edition</option>
-										<option value="2020">2020</option>
-										<option value="2021">2021</option>
-										<option value="2022">2022</option>
-									</select>
-                                </p>
-                                <p>
-                                    <label for="emailsignup" class="youmail" data-icon="e" >Publisher</label>
-                                    <input id="publisher" name="emailsignup" required="required" type="text" placeholder="Publisher"/>
-                                </p>
-								<p>
-                                    <label for="emailsignup" class="youmail" data-icon="e" >Cost</label>
-                                    <input id="cost" name="emailsignup" required="required" type="number" placeholder="Cost"/>
-                                </p>
-                                <p class="login button">
-                                    <input type="submit" value="Login" />
-                                </p>
-                            </form>
+<html lang="en">
+      <head>
+            <meta charset="UTF-8" />
+            <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+            <meta
+                  name="viewport"
+                  content="width=device-width, initial-scale=1.0"
+            />
+            <link rel="shortcut icon" href="../favicon.ico" />
+            <link rel="stylesheet" type="text/css" href="styles/demo.css" />
+            <link rel="stylesheet" type="text/css" href="styles/style.css" />
+            <link
+                  rel="stylesheet"
+                  type="text/css"
+                  href="styles/animate-custom.css"
+            />
+            <style>
+                  .books {
+                        border: 1px solid red;
+                        margin-top: 10px;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                  }
+                  th,
+                  td {
+                        border: 1px solid black;
+                        padding: 5px;
+                        font-style: italic;
+                  }
+                  .image-div {
+                        width: 250px;
+                        height: 300px;
+                        overflow: hidden;
+                  }
+                  .image-div > img {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: contain;
+                  }
+                  .modal {
+                        display: none; /* Hidden by default */
+                        position: fixed; /* Stay in place */
+                        z-index: 1; /* Sit on top */
+                        padding-top: 100px; /* Location of the box */
+                        left: 0;
+                        top: 0;
+                        width: 100%; /* Full width */
+                        height: 100%; /* Full height */
+                        overflow: auto; /* Enable scroll if needed */
+                        background-color: rgb(0, 0, 0); /* Fallback color */
+                        background-color: rgba(
+                              0,
+                              0,
+                              0,
+                              0.4
+                        ); /* Black w/ opacity */
+                  }
+
+                  /* Modal Content */
+                  .modal-content {
+                        background-color: #fefefe;
+                        margin: auto;
+                        padding: 20px;
+                        border: 1px solid #888;
+                        width: 80%;
+						display: flex;
+						flex-direction: column;
+						justify-content: center;
+						align-items: center;
+						font-size: 30px;
+						font-style: italic;
+
+                  }
+
+                  /* The Close Button */
+                  .close {
+                        color: #aaaaaa;
+                        float: right;
+                        font-size: 28px;
+                        font-weight: bold;
+                  }
+
+                  .close:hover,
+                  .close:focus {
+                        color: #000;
+                        text-decoration: none;
+                        cursor: pointer;
+                  }
+            </style>
+      </head>
+      <body>
+            <div class="container">
+                  <section>
+                        <div id="container_demo">
+                              <a class="hiddenanchor" id="toregister"></a>
+                              <a class="hiddenanchor" id="tologin"></a>
+                              <div id="wrapper">
+                                    <div id="login" class="animate form">
+                                          <form autocomplete="on">
+                                                <h1>Create Book</h1>
+                                                <p>
+                                                      <label
+                                                            for="username"
+                                                            class="uname"
+                                                            data-icon="u"
+                                                      >
+                                                            Book Image Url
+                                                      </label>
+                                                      <input
+                                                            id="image_url"
+                                                            name="image_url"
+                                                            required="required"
+                                                            type="url"
+                                                            placeholder="book image_url"
+                                                      />
+                                                </p>
+                                                <p>
+                                                      <label
+                                                            for="bookname"
+                                                            class="youpasswd"
+                                                            data-icon="p"
+                                                      >
+                                                            Book Name
+                                                      </label>
+                                                      <input
+                                                            id="bookname"
+                                                            name="password"
+                                                            required="required"
+                                                            type="text"
+                                                            placeholder="book name"
+                                                      />
+                                                </p>
+                                                <p>
+                                                      <label
+                                                            for="authorname"
+                                                            class="uname"
+                                                            data-icon="u"
+                                                            >Author Name</label
+                                                      >
+                                                      <input
+                                                            id="authorname"
+                                                            name="authorname"
+                                                            required="required"
+                                                            type="text"
+                                                            placeholder="author name"
+                                                      />
+                                                </p>
+                                                <p>
+                                                      <select id="genre">
+                                                            <option
+                                                                  value=""
+                                                                  selected
+                                                            >
+                                                                  Genre
+                                                            </option>
+                                                            <option
+                                                                  value="Science"
+                                                            >
+                                                                  Science
+                                                            </option>
+                                                            <option
+                                                                  value="Fiction"
+                                                            >
+                                                                  Fiction
+                                                            </option>
+                                                            <option
+                                                                  value="History"
+                                                            >
+                                                                  History
+                                                            </option>
+                                                            <option
+                                                                  value="Tech"
+                                                            >
+                                                                  Tech
+                                                            </option>
+                                                            <option
+                                                                  value="Business"
+                                                            >
+                                                                  Business
+                                                            </option>
+                                                      </select>
+                                                </p>
+                                                <p>
+                                                      <select id="edition">
+                                                            <option
+                                                                  value=""
+                                                                  selected
+                                                            >
+                                                                  Edition
+                                                            </option>
+                                                            <option
+                                                                  value="2020"
+                                                            >
+                                                                  2020
+                                                            </option>
+                                                            <option
+                                                                  value="2021"
+                                                            >
+                                                                  2021
+                                                            </option>
+                                                            <option
+                                                                  value="2022"
+                                                            >
+                                                                  2022
+                                                            </option>
+                                                      </select>
+                                                </p>
+                                                <p>
+                                                      <label
+                                                            for="emailsignup"
+                                                            class="youmail"
+                                                            data-icon="e"
+                                                            >Publisher</label
+                                                      >
+                                                      <input
+                                                            id="publisher"
+                                                            name="emailsignup"
+                                                            required="required"
+                                                            type="text"
+                                                            placeholder="Publisher"
+                                                      />
+                                                </p>
+                                                <p>
+                                                      <label
+                                                            for="emailsignup"
+                                                            class="youmail"
+                                                            data-icon="e"
+                                                            >Cost</label
+                                                      >
+                                                      <input
+                                                            id="cost"
+                                                            name="emailsignup"
+                                                            required="required"
+                                                            type="number"
+                                                            placeholder="Cost"
+                                                      />
+                                                </p>
+                                                <p class="login button">
+                                                      <input
+                                                            type="submit"
+                                                            value="Add Book"
+                                                      />
+                                                </p>
+                                          </form>
+                                    </div>
+                              </div>
                         </div>
-                    </div>
-                </div>  
-            </section>
-        </div>
-    </body>
+                  </section>
+            </div>
+            <div class="books">
+                  <table>
+                        <thead>
+                              <tr>
+                                    <th>Book Image</th>
+                                    <th>Book Name</th>
+                                    <th>Author Name</th>
+                                    <th>Genre</th>
+                                    <th>Edition</th>
+                                    <th>Publisher</th>
+                                    <th>Cost</th>
+                                    <th>Borrowed</th>
+                                    <th>Edit</th>
+                                    <th>Delete</th>
+                              </tr>
+                        </thead>
+                        <tbody>
+                              <!-- append the body here... -->
+                        </tbody>
+                  </table>
+            </div>
+            <div id="myModal" class="modal">
+                  <!-- Modal content -->
+                  <div class="modal-content">
+                        <span class="close">&times;</span>
+                        <p><input type="text"></p>
+						<p><input type="text"></p>
+						<p><input type="text"></p>
+						<p><input type="text"></p>
+						<p><input type="text"></p>
+						<p><input type="text"></p>
+						<p><button>Save</button></p>
+                  </div>
+            </div>
+      </body>
 </html>
-<script src="/scripts/createBook.js" ></script>
+<script src="/scripts/createBook.js"></script>
