--- a/user.html
+++ b/user.html
@@ -17,7 +17,7 @@
 		}
 		.cards{
 			border: 1px solid red;
-			height: 60vh;
+			height: 65vh;
 			box-sizing: border-box;
 			display: flex;
 			box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
@@ -84,7 +84,7 @@
 <body>
 	<div style="display: flex; justify-content: space-between;">
 		<div>
-			<button class="borrowed_books">See All the Borrowed Books</button>
+			<button class="borrowed_books">All Borrowed Books</button>
 		    <select class="genre_filter">
 		    	<option value="" selected>Genre</option>
 		    	<option value="Science">Science</option>
